# misc_snippets

./: .gitignore  CMakeLists.txt  armasm.c  com.c  invsqrttest.c  main.c  serial_test.py  sqrttests.c  swap.c
argz/: CMakeLists.txt  argz.c
armasm/: CMakeLists.txt
atan2/: CMakeLists.txt  atan.c  atan.nb
bitshift/: CMakeLists.txt  bitshift.c
breakinguparrays/: CMakeLists.txt  atan.nb  breakinguparrays.c
complex/: CMakeLists.txt  com.c
fabs/: CMakeLists.txt  fabs.c
inverse_sqrt/: CMakeLists.txt  invsqrttest.c
rotate/: CMakeLists.txt  rotate.c  rotate_asm.c_  rotate_c.c_
sqrt/: CMakeLists.txt  sqrttests.c
swap/: CMakeLists.txt  swaps.c
timed_functions/: CMakeLists.txt
timed_functions/include/: timed_functions.h
timed_functions/src/: timed_functions.c
